--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 							<ul class="timer">
 								<li class="d-inline-flex">
 									<div id="day" class="timer_num">03</div>
-									<div class="timer_unit">Days</div>
+									<div class="timer_unit">Dias</div>
 								</li>
 								<li class="d-inline-flex">
 									<div id="hour" class="timer_num">15</div>
-									<div class="timer_unit">Hours</div>
+									<div class="timer_unit">Horas</div>
 								</li>
 								<li class="d-inline-flex">
 									<div id="minute" class="timer_num">45</div>
-									<div class="timer_unit">Minutes</div>
+									<div class="timer_unit">Minutos</div>
 								</li>
 								<li class="d-inline-flex">
 									<div id="second" class="timer_num">23</div>
-									<div class="timer_unit">Seconds</div>
+									<div class="timer_unit">Segundos</div>
 								</li>
 							</ul>
 						</div>
@@ -82,10 +82,10 @@
 								<nav class="main_nav">
 									<ul>
 										<li class="active"><a href="#">Home</a></li>
-										<li><a href="ministries.html">Ministries</a></li>
-										<li><a href="sermons.html">Sermons</a></li>
+										<li><a href="ministries.html">Ministério</a></li>
+										<li><a href="sermons.html">Sermões</a></li>
 										<li><a href="blog.html">Blog</a></li>
-										<li><a href="contact.html">Contact</a></li>
+										<li><a href="contact.html">Contato</a></li>
 									</ul>
 								</nav>
 								<div class="search">
@@ -144,10 +144,10 @@
 			<nav class="menu_nav">
 				<ul>
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="ministries.html">Ministries</a></li>
-					<li><a href="sermons.html">Sermons</a></li>
+					<li><a href="ministries.html">Ministérios</a></li>
+					<li><a href="sermons.html">Sermões</a></li>
 					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Contato</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -168,8 +168,8 @@
 					<div class="home_slider_background" style="background-image:url(images/home_slider_background.jpg)"></div>
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
-						<h1>God is all around us</h1>
-						<div class="button home_slider_button"><a href="#">Come and join us</a></div>
+						<h1>Deus está conosco</h1>
+						<div class="button home_slider_button"><a href="#">Venha se juntar a nós</a></div>
 					</div>
 				</div>
 
@@ -178,8 +178,8 @@
 					<div class="home_slider_background" style="background-image:url(images/home_slider_background.jpg)"></div>
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
-						<h1>God is all around us</h1>
-						<div class="button home_slider_button"><a href="#">Come and join us</a></div>
+						<h1>Deus está conosco</h1>
+						<div class="button home_slider_button"><a href="#">Venha se juntar a nós</a></div>
 					</div>
 				</div>
 
@@ -188,8 +188,8 @@
 					<div class="home_slider_background" style="background-image:url(images/home_slider_background.jpg)"></div>
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
-						<h1>God is all around us</h1>
-						<div class="button home_slider_button"><a href="#">Come and join us</a></div>
+						<h1>Deus está conosco</h1>
+						<div class="button home_slider_button"><a href="#">Venha se juntar a nós</a></div>
 					</div>
 				</div>
 
@@ -207,8 +207,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_1.png" alt=""></div>
-						<div class="section_title"><h2>Welcome to Our Church</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>Bem-Vindo á nossa igreja</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -218,7 +218,7 @@
 				<div class="col-lg-6">
 					<div class="intro_text">
 						<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
-						<div class="button intro_button"><a href="#">Read More</a></div>
+						<div class="button intro_button"><a href="#">Consultar Mais</a></div>
 					</div>
 				</div>
 
@@ -240,8 +240,9 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_2.png" alt=""></div>
-						<div class="section_title"><h2>Our Church main activities</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>
+Nossas principais atividades da Igreja</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -256,7 +257,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_1.png" alt=""></div>
-						<div class="services_title">Teaching</div>
+						<div class="services_title">Ensino</div>
 					</div>
 				</div>
 
@@ -264,7 +265,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_2.png" alt=""></div>
-						<div class="services_title">Communion</div>
+						<div class="services_title">Comunhão</div>
 					</div>
 				</div>
 
@@ -272,7 +273,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_3.png" alt=""></div>
-						<div class="services_title">Confessions</div>
+						<div class="services_title">Confissões</div>
 					</div>
 				</div>
 
@@ -280,7 +281,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_4.png" alt=""></div>
-						<div class="services_title">Sermons</div>
+						<div class="services_title">Sermões</div>
 					</div>
 				</div>
 
@@ -288,7 +289,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_5.png" alt=""></div>
-						<div class="services_title">Daily Mass</div>
+						<div class="services_title">Missa Diária</div>
 					</div>
 				</div>
 
@@ -296,7 +297,7 @@
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="services_item text-center">
 						<div class="services_image"><img src="images/services_6.png" alt=""></div>
-						<div class="services_title">Daily Prayers</div>
+						<div class="services_title">Orações Diárias</div>
 					</div>
 				</div>
 
@@ -313,8 +314,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_3.png" alt=""></div>
-						<div class="section_title"><h2>Today's Sermon</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>Sermão de hoje</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -328,16 +329,16 @@
 				<!-- Sermon Content -->
 				<div class="col-lg-6">
 					<div class="sermon_content">
-						<div class="sermon_title">Receive The Holy Spirit By Jesus Christ</div>
+						<div class="sermon_title">Receba o Espírito Santo por Jesus Cristo</div>
 						<ul class="sermon_list">
-							<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-							<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-							<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+							<li>Sermão por: <a href="#">Padre José</a></li>
+							<li>Categoria: <a href="#">Jesus cristo</a>, <a href="#">Santo</a></li>
+							<li>Data: <a href="#">Segunda 11 de março de 2018</a></li>
 						</ul>
 						<div class="sermon_text">
 							<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
 						</div>
-						<div class="button sermon_button"><a href="sermons.html">Read More</a></div>
+						<div class="button sermon_button"><a href="sermons.html">Consulte Mais </a></div>
 					</div>
 				</div>
 
@@ -353,8 +354,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_4.png" alt=""></div>
-						<div class="section_title"><h2>Our Church's Causes</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>Causas da nossa igreja</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -368,7 +369,7 @@
 							<!-- Causes Slider Item -->
 							<div class="owl-item text-center causes_item">
 								<div class="causes_item_image"><img src="images/causes_1.jpg" alt=""></div>
-								<div class="causes_item_title">Children's aid</div>
+								<div class="causes_item_title">Ajuda para as crianças</div>
 								<div class="causes_item_text">
 									<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst.</p>
 								</div>
@@ -377,7 +378,7 @@
 							<!-- Causes Slider Item -->
 							<div class="owl-item text-center causes_item">
 								<div class="causes_item_image"><img src="images/causes_2.jpg" alt=""></div>
-								<div class="causes_item_title">Aid for the Elderly</div>
+								<div class="causes_item_title">Ajuda para os idosos</div>
 								<div class="causes_item_text">
 									<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst.</p>
 								</div>
@@ -386,7 +387,7 @@
 							<!-- Causes Slider Item -->
 							<div class="owl-item text-center causes_item">
 								<div class="causes_item_image"><img src="images/causes_3.jpg" alt=""></div>
-								<div class="causes_item_title">Community Food</div>
+								<div class="causes_item_title">Comida para comunidade</div>
 								<div class="causes_item_text">
 									<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst.</p>
 								</div>
@@ -395,7 +396,7 @@
 							<!-- Causes Slider Item -->
 							<div class="owl-item text-center causes_item">
 								<div class="causes_item_image"><img src="images/causes_4.jpg" alt=""></div>
-								<div class="causes_item_title">After School</div>
+								<div class="causes_item_title">Depois da escola</div>
 								<div class="causes_item_text">
 									<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst.</p>
 								</div>
@@ -420,16 +421,16 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_5.png" alt=""></div>
-						<div class="section_title"><h2>Quote of the day</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>Citação do dia</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
 			<div class="row quote_row">
 				<div class="col text-center">
 					<div class="quote_char"><img src="images/quote_char.png" alt=""></div>
-					<div class="quote_text">4 One thing I ask from the LORD, this only do I seek: that I may dwell in the house of the LORD all the days of my life, to gaze on the beauty of the LORD and to seek him in his temple.</div>
-					<div class="quote_source">Psalm 27:4</div>
+					<div class="quote_text">Uma coisa peço ao Senhor, e só isso que busco: que eu possa morar na casa do Senhor todos os dias da minha vida, para contemplar a formosura do Senhor e para buscá-lo no seu templo.</div>
+					<div class="quote_source">Salmo 27:4</div>
 				</div>
 			</div>
 		</div>
@@ -443,8 +444,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_6.png" alt=""></div>
-						<div class="section_title"><h2>Latest News</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>Ultimas noticias</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -457,15 +458,15 @@
 							<img src="images/news_1.jpg" alt="">
 							<div class="news_date d-flex flex-column align-items-center justify-content-center">
 								<div class="news_day">06</div>
-								<div class="news_month">March, 2018</div>
+								<div class="news_month">Agosto, 2018</div>
 							</div>
 						</div>
 						<div class="news_content">
-							<div class="news_title">Latest news in the '18 community</div>
+							<div class="news_title">Últimas notícias na comunidade</div>
 							<div class="news_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dic tumst malesuada congue magna at finibus. In hac habitasse platea.</p>
 							</div>
-							<div class="news_link"><a href="blog.html">Read More</a></div>
+							<div class="news_link"><a href="blog.html">Consultar Mais</a></div>
 						</div>
 					</div>
 				</div>
@@ -477,15 +478,15 @@
 							<img src="images/news_2.jpg" alt="">
 							<div class="news_date d-flex flex-column align-items-center justify-content-center">
 								<div class="news_day">05</div>
-								<div class="news_month">March, 2018</div>
+								<div class="news_month">Março, 2018</div>
 							</div>
 						</div>
 						<div class="news_content">
-							<div class="news_title">Help us raise money for the kids</div>
+							<div class="news_title">Ajude-nos a arrecadar dinheiro para as crianças</div>
 							<div class="news_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dic tumst malesuada congue magna at finibus. In hac habitasse platea.</p>
 							</div>
-							<div class="news_link"><a href="blog.html">Read More</a></div>
+							<div class="news_link"><a href="blog.html">Consultar Mais</a></div>
 						</div>
 					</div>
 				</div>
@@ -497,15 +498,15 @@
 							<img src="images/news_3.jpg" alt="">
 							<div class="news_date d-flex flex-column align-items-center justify-content-center">
 								<div class="news_day">03</div>
-								<div class="news_month">March, 2018</div>
+								<div class="news_month">Maio, 2018</div>
 							</div>
 						</div>
 						<div class="news_content">
-							<div class="news_title">The best way to pray</div>
+							<div class="news_title">A melhor maneira de rezar </div>
 							<div class="news_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dic tumst malesuada congue magna at finibus. In hac habitasse platea.</p>
 							</div>
-							<div class="news_link"><a href="blog.html">Read More</a></div>
+							<div class="news_link"><a href="blog.html">Consultar Mais</a></div>
 						</div>
 					</div>
 				</div>
@@ -521,11 +522,11 @@
 			<div class="row">
 				<div class="col">
 					<div class="newsletter_content d-flex flex-lg-row flex-column align-items-center justify-content-start">
-						<div class="newsletter_title">Subscribe to our newsletter</div>
+						<div class="newsletter_title">Assine nosso Boletim de Notícias</div>
 						<div class="newsletter_form_container ml-lg-auto">
 							<form action="#" id="newsletter_form" class="newsletter_form">
 								<input type="email" class="newsletter_input" placeholder="Your email" required="required">
-								<button id="newsletter_button" class="newsletter_button">Subscribe</button>
+								<button id="newsletter_button" class="newsletter_button">Assinar</button>
 							</form>
 						</div>
 					</div>
@@ -547,11 +548,11 @@
 					<div class="logo_container">
 						<div class="logo">
 							<a href="#">
-								<span>Believe</span>
+								<span>Acredite</span>
 								<img src="images/logo_large.jpg" alt="">
 							</a>
 						</div>
-						<div class="logo_subtitle">Church template</div>
+						<div class="logo_subtitle">Santuário do Senhor Bom Jesus</div>
 					</div>
 					<div class="footer_social">
 						<ul>
@@ -566,18 +567,18 @@
 				<!-- Footer Column -->
 				<div class="col-lg-4 footer_col">
 					<div class="footer_links">
-						<div class="footer_title">Useful Links</div>
+						<div class="footer_title">Links Úteis</div>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="#">Donations</a></li>
-							<li><a href="sermons.html">Sermons</a></li>
-							<li><a href="#">Causes</a></li>
-							<li><a href="#">Quotes</a></li>
-							<li><a href="blog.html">News</a></li>
-							<li><a href="#">Event List</a></li>
-							<li><a href="ministries.html">Ministries</a></li>
-							<li><a href="#">Priests</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="#">Doações</a></li>
+							<li><a href="sermons.html">Sermões</a></li>
+							<li><a href="#">Causas</a></li>
+							<li><a href="#">Citações</a></li>
+							<li><a href="blog.html">Notícias</a></li>
+							<li><a href="#">Lista de Eventos</a></li>
+							<li><a href="ministries.html">Ministérios</a></li>
+							<li><a href="#">Padres</a></li>
+							<li><a href="contact.html">Contato</a></li>
 						</ul>
 					</div>
 				</div>
@@ -585,11 +586,11 @@
 				<!-- Footer Column -->
 				<div class="col-lg-3 footer_col">
 					<div class="footer_contact">
-						<div class="footer_title">Contact Us</div>
+						<div class="footer_title">Contate-nos</div>
 						<ul>
-							<li><span>Address: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
+							<li><span>Endereço: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
 							<li class="footer_contact_phone">
-								<span>Phone: </span>
+								<span>Telefone: </span>
 								<div>
 									<div> +53 345 7953 32453</div>
 									<div> +53 345 7557 822112</div>
@@ -605,7 +606,7 @@
 
 		<!-- Copyright -->
 		<div class="copyright text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos direitos reservados | por <a href="http://sites.xfind.com.br" target="_blank">Xfind</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 
