--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Santuário do Senhor Bom Jesus da Cana Verde</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Demo project">
+<meta name="description" content="XFind">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -13,10 +13,13 @@
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
 <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/responsive.css">
+
+	<link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
 
-<div class="super_container">
+<div class="st-container">
 	
 	<!-- Header -->
 
@@ -29,10 +32,19 @@
 				<div class="row">
 					<div class="col top_bar_content d-flex flex-row align-items-center justify-content-start">
 						<div class="event_timer">
-							<span>Próxima novena:</span>
+							<span>Próxima evento:</span>
 							<ul class="timer">
 								<li class="d-inline-flex">
 									<div id="day" class="timer_num">03</div>
+									<div class="timer_unit">Dia</div>
+								</li>
+								<li class="d-inline-flex">
+									<div id="hour" class="timer_num">15</div>
+									<div class="timer_unit">Hora</div>
+								</li>
+								<li class="d-inline-flex">
+									<div id="minute" class="timer_num">45</div>
+									<div class="timer_unit">Minuto</div>
 									<div class="timer_unit">Dias</div>
 								</li>
 								<li class="d-inline-flex">
@@ -69,10 +81,7 @@
 							<div class="logo_container">
 								<div class="logo">
 									<a href="#">
-										<!-- Pedir o logo
-										<img src="images/logo.jpg" alt="">
-										-->
-										<span>Santuário do Senhor Bom Jesus da Cana Verde</span>
+										<span><img class="img-logo" src="images/logo.png" alt="logo"></span>
 									</a>
 								</div>
 							</div>
@@ -82,8 +91,11 @@
 								<nav class="main_nav">
 									<ul>
 										<li class="active"><a href="#">Home</a></li>
+
+										<li><a href="ministries.html">Nossa História</a></li>
+										<li><a href="gallery.html">Galeria</a> </li>
+										<li><a href="sermons.html">Liturgia</a></li>
 										<li><a href="ministries.html">Ministério</a></li>
-										<li><a href="sermons.html">Sermões</a></li>
 										<li><a href="blog.html">Blog</a></li>
 										<li><a href="contact.html">Contato</a></li>
 									</ul>
@@ -95,11 +107,6 @@
 								</div>
 							</div>
 
-							<!-- Hamburger -->
-
-							<div class="hamburger ml-auto">
-								<i class="fa fa-bars" aria-hidden="true"></i>
-							</div>
 
 						</div>
 					</div>
@@ -175,7 +182,7 @@
 
 				<!-- Home Slider Item -->
 				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url(images/home_slider_background.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/home_slider_background2.jpg)"></div>
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 						<h1>Deus está conosco</h1>
@@ -185,7 +192,7 @@
 
 				<!-- Home Slider Item -->
 				<div class="owl-item">
-					<div class="home_slider_background" style="background-image:url(images/home_slider_background.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/home_slider_background3.jpg)"></div>
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 						<h1>Deus está conosco</h1>
@@ -535,6 +542,24 @@ Nossas principais atividades da Igreja</h2></div>
 		</div>
 	</div>
 
+
+	<!--Map-->
+	<div class="st-container">
+		<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+		<div style='overflow:hidden;height:440px;width:auto;'>
+			<div id='gmap_canvas' style='height:440px;width:auto;'></div>
+			<style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+		</div><script type='text/javascript'>function init_map()
+			{var myOptions = {zoom:16,center:new google.maps.LatLng(-23.6868211,-49.8215371), mapTypeId: google.maps.MapTypeId.ROADMAP};
+			map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
+			marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(-23.6868211,-49.8215371)});
+			infowindow = new google.maps.InfoWindow({content:'<strong>Santuário do Senhor Bom Jesus da Cana Verde</strong><br>Siqueira Campos Paraná Brasil<br>'});
+			google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});
+			infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);
+	</script>
+	</div>
+
+
 	<!-- Footer -->
 
 	<footer class="footer">
@@ -548,11 +573,9 @@ Nossas principais atividades da Igreja</h2></div>
 					<div class="logo_container">
 						<div class="logo">
 							<a href="#">
-								<span>Acredite</span>
-								<img src="images/logo_large.jpg" alt="">
+								<img class="img-logo-footer" src="images/logo2.png" alt="">
 							</a>
 						</div>
-						<div class="logo_subtitle">Santuário do Senhor Bom Jesus</div>
 					</div>
 					<div class="footer_social">
 						<ul>
@@ -604,15 +627,18 @@ Nossas principais atividades da Igreja</h2></div>
 			</div>
 		</div>
 
+
 		<!-- Copyright -->
-		<div class="copyright text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos direitos reservados | por <a href="http://sites.xfind.com.br" target="_blank">Xfind</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+		<div class="copyright text-center">
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos direitos reservados | by <a href="http://sites.xfind.com.br" target="_blank">XFind</a>
+
 </div>
 
 	</footer>
 
 </div>
+
+
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="styles/bootstrap4/popper.js"></script>
