--- a/index.html
+++ b/index.html
@@ -31,36 +31,6 @@
 			<div class="container">
 				<div class="row">
 					<div class="col top_bar_content d-flex flex-row align-items-center justify-content-start">
-						<div class="event_timer">
-							<span>Próxima evento:</span>
-							<ul class="timer">
-								<li class="d-inline-flex">
-									<div id="day" class="timer_num">03</div>
-									<div class="timer_unit">Dia</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="hour" class="timer_num">15</div>
-									<div class="timer_unit">Hora</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="minute" class="timer_num">45</div>
-									<div class="timer_unit">Minuto</div>
-									<div class="timer_unit">Dias</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="hour" class="timer_num">15</div>
-									<div class="timer_unit">Horas</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="minute" class="timer_num">45</div>
-									<div class="timer_unit">Minutos</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="second" class="timer_num">23</div>
-									<div class="timer_unit">Segundos</div>
-								</li>
-							</ul>
-						</div>
 						<div class="donations_button ml-auto">
 							<a href="#">Faça Sua Doação</a>
 						</div>
@@ -176,7 +146,6 @@
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 						<h1>Deus está conosco</h1>
-						<div class="button home_slider_button"><a href="#">Venha se juntar a nós</a></div>
 					</div>
 				</div>
 
@@ -186,7 +155,6 @@
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 						<h1>Deus está conosco</h1>
-						<div class="button home_slider_button"><a href="#">Venha se juntar a nós</a></div>
 					</div>
 				</div>
 
@@ -196,7 +164,6 @@
 					<div class="home_slider_content text-center">
 						<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 						<h1>Deus está conosco</h1>
-						<div class="button home_slider_button"><a href="#">Venha se juntar a nós</a></div>
 					</div>
 				</div>
 
@@ -214,8 +181,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_1.png" alt=""></div>
-						<div class="section_title"><h2>Bem-Vindo á nossa igreja</h2></div>
-						<div class="section_subtitle">Deus ama a todos</div>
+						<div class="section_title"><h2>Santuário do Senhor Bom Jesus da Cana Verde</h2></div>
+						<div class="section_subtitle">Bem-Vindos</div>
 					</div>
 				</div>
 			</div>
@@ -225,7 +192,7 @@
 				<div class="col-lg-6">
 					<div class="intro_text">
 						<p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
-						<div class="button intro_button"><a href="#">Consultar Mais</a></div>
+						<div class="button intro_button"><a href="#">Mais</a></div>
 					</div>
 				</div>
 
@@ -247,15 +214,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_2.png" alt=""></div>
-						<div class="section_title"><h2>
-Nossas principais atividades da Igreja</h2></div>
-						<div class="section_subtitle">Deus ama a todos</div>
+						<div class="section_title"><h2>Nosso Santuário</h2></div>
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<div class="services_text text-center"><p>Integer nec bibendum lacus. Suspendisse dictum enim sit amet libero malesuada feugiat. Praesent malesuada congue magna at finibus. In hac habi tasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac.</p></div>
 				</div>
 			</div>
 			<div class="row services_row">
@@ -321,8 +281,7 @@ Nossas principais atividades da Igreja</h2></div>
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_3.png" alt=""></div>
-						<div class="section_title"><h2>Sermão de hoje</h2></div>
-						<div class="section_subtitle">Deus ama a todos</div>
+						<div class="section_title"><h2>Litúrgia Diária</h2></div>
 					</div>
 				</div>
 			</div>
