--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-<title>Contact</title>
+<title>Contato</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Demo project">
@@ -10,6 +10,7 @@
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="styles/contact.css">
 <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
+<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
@@ -25,29 +26,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col top_bar_content d-flex flex-row align-items-center justify-content-start">
-						<div class="event_timer">
-							<span>Next Big Event:</span>
-							<ul class="timer">
-								<li class="d-inline-flex">
-									<div id="day" class="timer_num">03</div>
-									<div class="timer_unit">Days</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="hour" class="timer_num">15</div>
-									<div class="timer_unit">Hours</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="minute" class="timer_num">45</div>
-									<div class="timer_unit">Minutes</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="second" class="timer_num">23</div>
-									<div class="timer_unit">Seconds</div>
-								</li>
-							</ul>
-						</div>
 						<div class="donations_button ml-auto">
-							<a href="#">Send Donations</a>
+							<a href="#">Faça Sua Doação</a>
 						</div>
 					</div>
 				</div>
@@ -66,8 +46,7 @@
 							<div class="logo_container">
 								<div class="logo">
 									<a href="#">
-										<span>Believe</span>
-										<img src="images/logo.jpg" alt="">
+										<span><img class="img-logo" src="images/logo.png" alt="logo"></span>
 									</a>
 								</div>
 							</div>
@@ -76,11 +55,13 @@
 							<div class="header_nav_container ml-auto">
 								<nav class="main_nav">
 									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="ministries.html">Ministries</a></li>
-										<li><a href="sermons.html">Sermons</a></li>
-										<li><a href="blog.html">Blog</a></li>
-										<li class="active"><a href="#">Contact</a></li>
+										<li class="active"><a href="#">Home</a></li>
+										<li><a href="ministries.html">Nossa História</a></li>
+										<li><a href="gallery.html">Galeria</a> </li>
+										<li><a href="sermons.html">Liturgia</a></li>
+										<li><a href="ministries.html">Ministério</a></li>
+										<li><a href="blog.html">Noticias</a></li>
+										<li><a href="contact.html">Contato</a></li>
 									</ul>
 								</nav>
 								<div class="search">
@@ -107,7 +88,7 @@
 						<div class="col">
 							<div class="header_search_content d-flex flex-row align-items-center justify-content-end">
 								<form action="#" class="header_search_form">
-									<input type="search" class="search_input" placeholder="Search" required="required">
+									<input type="search" class="search_input" placeholder="Procurar" required="required">
 									<button class="header_search_button d-flex flex-column align-items-center justify-content-center">
 										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_2" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="20px" height="20px">
 											<path class="search_path" d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" fill="#353535"/>
@@ -129,7 +110,7 @@
 		<div class="menu_content">
 			<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 			<form action="#" class="menu_search_form">
-				<input type="search" class="menu_search_input" placeholder="Search" required="required">
+				<input type="search" class="menu_search_input" placeholder="Procurar" required="required">
 				<button class="menu_search_button d-flex flex-column align-items-center justify-content-center">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_3" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="20px" height="20px">
 					<path class="search_path" d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" fill="#353535"/>
@@ -138,11 +119,11 @@
 			</form>
 			<nav class="menu_nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="ministries.html">Ministries</a></li>
-					<li><a href="sermons.html">Sermons</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="ministries.html">Ministérios</a></li>
+					<li><a href="sermons.html">Sermões</a></li>
+					<li><a href="blog.html">Noticias</a></li>
+					<li><a href="contact.html">Contato</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -158,11 +139,11 @@
 				<div class="col">
 					<div class="home_container">
 						<div class="home_content d-flex flex-row align-items-center justify-content-start">
-							<div class="home_title">Contact</div>
+							<div class="home_title">Contato</div>
 							<div class="home_breadcrumbs ml-auto">
 								<ul class="breadcrumbs">
 									<li><a href="index.html">Home</a></li>
-									<li>Contact</li>
+									<li>Contato</li>
 								</ul>
 							</div>
 						</div>
@@ -194,7 +175,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="contact_title">Contact Info</div>
+					<div class="contact_title">Info. Contato</div>
 				</div>
 			</div>
 			<div class="row contact_info_row row-eq-height">
@@ -203,28 +184,28 @@
 				<div class="col-lg-6 d-flex flex-column align-items-start justify-content-end">
 					<div class="row">
 						<div class="col-lg-6 contact_info_col">
-							<div class="contact_info_title">Los Angeles Church</div>
+							<div class="contact_info_title">Santuario</div>
 							<ul class="contact_info_list">
-								<li><span>Address: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
+								<li><span>Endereço: </span>..... </li>
 								<li class="footer_contact_phone">
-									<span>Phone: </span>
+									<span>Telefone: </span>
 									<div>
-										<div> +53 345 7953 32453</div>
-										<div> +53 345 7557 822112</div>
+										<div> ...</div>
+										<div> ...</div>
 									</div>
 								</li>
 								<li><span>Email: </span>yourmail@gmail.com</li>
 							</ul>
 						</div>
 						<div class="col-lg-6 contact_info_col">
-							<div class="contact_info_title">San Francisco Church</div>
+							<div class="contact_info_title">Santuario</div>
 							<ul class="contact_info_list">
-								<li><span>Address: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
+								<li><span>Endereço: </span>.....</li>
 								<li class="footer_contact_phone">
-									<span>Phone: </span>
+									<span>Telefone: </span>
 									<div>
-										<div> +53 345 7953 32453</div>
-										<div> +53 345 7557 822112</div>
+										<div> .....</div>
+										<div> .....</div>
 									</div>
 								</li>
 								<li><span>Email: </span>yourmail@gmail.com</li>
@@ -247,18 +228,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="contact_title">Contact Us</div>
+					<div class="contact_title">Contato-nos</div>
 					<form action="#" class="contact_form">
 						<div class="row">
 							<div class="col-md-6">
-								<input type="text" class="contact_input contacts_input_name" placeholder="Your Name" required="required">
+								<input type="text" class="contact_input contacts_input_name" placeholder="Seu nome" required="required">
 							</div>
 							<div class="col-md-6">
-								<input type="email" class="contact_input contact_input_email" placeholder="Your E-mail" required="required">
+								<input type="email" class="contact_input contact_input_email" placeholder="Seu E-mail" required="required">
 							</div>
 						</div>
-						<textarea id="contact_text_area" placeholder="Your Message" class="contact_text"></textarea>
-						<button class="contact_button trans_200">Submit</button>
+						<textarea id="contact_text_area" placeholder="Sua Mensagem" class="contact_text"></textarea>
+						<button class="contact_button trans_200">Enviar</button>
 					</form>
 				</div>
 			</div>
@@ -275,11 +256,11 @@
 			<div class="row">
 				<div class="col">
 					<div class="newsletter_content d-flex flex-lg-row flex-column align-items-center justify-content-start">
-						<div class="newsletter_title">Subscribe to our newsletter</div>
+						<div class="newsletter_title">Increva-se para receber noticias</div>
 						<div class="newsletter_form_container ml-lg-auto">
 							<form action="#" id="newsletter_form" class="newsletter_form">
-								<input type="email" class="newsletter_input" placeholder="Your email" required="required">
-								<button id="newsletter_button" class="newsletter_button">Subscribe</button>
+								<input type="email" class="newsletter_input" placeholder="Seu email" required="required">
+								<button id="newsletter_button" class="newsletter_button">Increva-se</button>
 							</form>
 						</div>
 					</div>
@@ -301,11 +282,9 @@
 					<div class="logo_container">
 						<div class="logo">
 							<a href="#">
-								<span>Believe</span>
-								<img src="images/logo_large.jpg" alt="">
+								<img class="img-logo-footer" src="images/logo2.png" alt="">
 							</a>
 						</div>
-						<div class="logo_subtitle">Church template</div>
 					</div>
 					<div class="footer_social">
 						<ul>
@@ -320,18 +299,18 @@
 				<!-- Footer Column -->
 				<div class="col-lg-4 footer_col">
 					<div class="footer_links">
-						<div class="footer_title">Useful Links</div>
+						<div class="footer_title">Links Úteis</div>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="#">Donations</a></li>
-							<li><a href="sermons.html">Sermons</a></li>
-							<li><a href="#">Causes</a></li>
-							<li><a href="#">Quotes</a></li>
-							<li><a href="blog.html">News</a></li>
-							<li><a href="#">Event List</a></li>
-							<li><a href="ministries.html">Ministries</a></li>
-							<li><a href="#">Priests</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="#">Doações</a></li>
+							<li><a href="sermons.html">Sermões</a></li>
+							<li><a href="#">Causas</a></li>
+							<li><a href="#">Citações</a></li>
+							<li><a href="blog.html">Notícias</a></li>
+							<li><a href="#">Lista de Eventos</a></li>
+							<li><a href="ministries.html">Ministérios</a></li>
+							<li><a href="#">Padres</a></li>
+							<li><a href="contact.html">Contato</a></li>
 						</ul>
 					</div>
 				</div>
@@ -339,14 +318,14 @@
 				<!-- Footer Column -->
 				<div class="col-lg-3 footer_col">
 					<div class="footer_contact">
-						<div class="footer_title">Contact Us</div>
+						<div class="footer_title">Contate-nos</div>
 						<ul>
-							<li><span>Address: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
+							<li><span>Endereço: </span>.....</li>
 							<li class="footer_contact_phone">
-								<span>Phone: </span>
+								<span>Telefone: </span>
 								<div>
-									<div> +53 345 7953 32453</div>
-									<div> +53 345 7557 822112</div>
+									<div> .....</div>
+									<div> .....</div>
 								</div>
 							</li>
 							<li><span>Email: </span>yourmail@gmail.com</li>
@@ -358,8 +337,8 @@
 		</div>
 
 		<!-- Copyright -->
-		<div class="copyright text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+		<div class="copyright text-center">
+			Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos direitos reservados | by <a href="http://sites.xfind.com.br" target="_blank">XFind</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 
