--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="ministries.html">Ministérios</a></li>
 					<li><a href="sermons.html">Sermões</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="blog.html">Noticias</a></li>
 					<li><a href="contact.html">Contato</a></li>
 				</ul>
 			</nav>
