--- a/sermons.html
+++ b/sermons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-<title>Sermons</title>
+<title>Sermões</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Demo project">
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
 <link rel="stylesheet" type="text/css" href="styles/sermons.css">
 <link rel="stylesheet" type="text/css" href="styles/sermons_responsive.css">
+<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
@@ -24,33 +25,13 @@
 		
 		<!-- Top Bar -->
 
+		<!-- Top Bar -->
 		<div class="top_bar">
 			<div class="container">
 				<div class="row">
 					<div class="col top_bar_content d-flex flex-row align-items-center justify-content-start">
-						<div class="event_timer">
-							<span>Next Big Event:</span>
-							<ul class="timer">
-								<li class="d-inline-flex">
-									<div id="day" class="timer_num">03</div>
-									<div class="timer_unit">Days</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="hour" class="timer_num">15</div>
-									<div class="timer_unit">Hours</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="minute" class="timer_num">45</div>
-									<div class="timer_unit">Minutes</div>
-								</li>
-								<li class="d-inline-flex">
-									<div id="second" class="timer_num">23</div>
-									<div class="timer_unit">Seconds</div>
-								</li>
-							</ul>
-						</div>
 						<div class="donations_button ml-auto">
-							<a href="#">Send Donations</a>
+							<a href="#">Faça Sua Doação</a>
 						</div>
 					</div>
 				</div>
@@ -69,8 +50,7 @@
 							<div class="logo_container">
 								<div class="logo">
 									<a href="#">
-										<span>Believe</span>
-										<img src="images/logo.jpg" alt="">
+										<span><img class="img-logo" src="images/logo.png" alt="logo"></span>
 									</a>
 								</div>
 							</div>
@@ -79,11 +59,13 @@
 							<div class="header_nav_container ml-auto">
 								<nav class="main_nav">
 									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="ministries.html">Ministries</a></li>
-										<li class="active"><a href="#">Sermons</a></li>
-										<li><a href="blog.html">Blog</a></li>
-										<li><a href="contact.html">Contact</a></li>
+										<li class="active"><a href="#">Home</a></li>
+										<li><a href="ministries.html">Nossa História</a></li>
+										<li><a href="gallery.html">Galeria</a> </li>
+										<li><a href="sermons.html">Liturgia</a></li>
+										<li><a href="ministries.html">Ministério</a></li>
+										<li><a href="blog.html">Noticias</a></li>
+										<li><a href="contact.html">Contato</a></li>
 									</ul>
 								</nav>
 								<div class="search">
@@ -110,7 +92,7 @@
 						<div class="col">
 							<div class="header_search_content d-flex flex-row align-items-center justify-content-end">
 								<form action="#" class="header_search_form">
-									<input type="search" class="search_input" placeholder="Search" required="required">
+									<input type="search" class="search_input" placeholder="Procurar" required="required">
 									<button class="header_search_button d-flex flex-column align-items-center justify-content-center">
 										<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_2" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="20px" height="20px">
 											<path class="search_path" d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" fill="#353535"/>
@@ -132,7 +114,7 @@
 		<div class="menu_content">
 			<div class="cross_1 d-flex flex-column align-items-center justify-content-center"><img src="images/cross_1.png" alt=""></div>
 			<form action="#" class="menu_search_form">
-				<input type="search" class="menu_search_input" placeholder="Search" required="required">
+				<input type="search" class="menu_search_input" placeholder="Procurar" required="required">
 				<button class="menu_search_button d-flex flex-column align-items-center justify-content-center">
 				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_3" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="20px" height="20px">
 					<path class="search_path" d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" fill="#353535"/>
@@ -141,11 +123,11 @@
 			</form>
 			<nav class="menu_nav">
 				<ul>
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="ministries.html">Ministries</a></li>
-					<li><a href="#">Sermons</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="ministries.html">Ministérios</a></li>
+					<li><a href="sermons.html">Sermões</a></li>
+					<li><a href="blog.html">Noticias</a></li>
+					<li><a href="contact.html">Contato</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -161,11 +143,11 @@
 				<div class="col">
 					<div class="home_container">
 						<div class="home_content d-flex flex-row align-items-center justify-content-start">
-							<div class="home_title">Sermons</div>
+							<div class="home_title">Sermões</div>
 							<div class="home_breadcrumbs ml-auto">
 								<ul class="breadcrumbs">
 									<li><a href="index.html">Home</a></li>
-									<li>Sermons</li>
+									<li>Sermões</li>
 								</ul>
 							</div>
 						</div>
@@ -184,8 +166,9 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_3.png" alt=""></div>
-						<div class="section_title"><h2>Today's Sermon</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>
+							Sermão de hoje</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -199,11 +182,14 @@
 				<!-- Sermon Content -->
 				<div class="col-lg-6">
 					<div class="sermon_content">
-						<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
+						<div class="sermon_title"><a href="sermon_single.html">
+							Receba o Espírito Santo por Jesus Cristo</a></div>
 						<ul class="sermon_list">
-							<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-							<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-							<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+							<li>
+								Sermão por: <a href="#">Priest Jack Smith</a></li>
+							<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santo</a></li>
+							<li>Data: <a href="#">
+								Segunda 11 de março de 2018</a></li>
 						</ul>
 						<div class="sermon_text">
 							<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -233,8 +219,8 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_image"><img src="images/church_7.png" alt=""></div>
-						<div class="section_title"><h2>Popular Sermons</h2></div>
-						<div class="section_subtitle">God loves us all</div>
+						<div class="section_title"><h2>Sermões populares</h2></div>
+						<div class="section_subtitle">Deus ama a todos</div>
 					</div>
 				</div>
 			</div>
@@ -245,11 +231,13 @@
 					<div class="popular_item">
 						<div class="popular_image"><img src="images/popular_1.jpg" alt="https://unsplash.com/@joshapplegate"></div>
 						<div class="sermon_content">
-							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
+							<div class="sermon_title"><a href="sermon_single.html">
+								Receba o Espírito Santo por Jesus Cristo</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+								<li>Sermão por: <a href="#">Priest Jack Smith</a></li>
+								<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santo</a></li>
+								<li>Data: <a href="#">
+									Segunda 11 de março de 2018</a></li>
 							</ul>
 							<div class="sermon_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -273,11 +261,13 @@
 					<div class="popular_item">
 						<div class="popular_image"><img src="images/popular_2.jpg" alt="https://unsplash.com/@joshapplegate"></div>
 						<div class="sermon_content">
-							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
+							<div class="sermon_title"><a href="sermon_single.html">
+								Receba o Espírito Santo por Jesus Cristo</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+								<li>Sermão por: <a href="#">Priest Jack Smith</a></li>
+								<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santos</a></li>
+								<li>Data: <a href="#">
+									Segunda 11 de março de 2018</a></li>
 							</ul>
 							<div class="sermon_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -301,11 +291,12 @@
 					<div class="popular_item">
 						<div class="popular_image"><img src="images/popular_3.jpg" alt="https://unsplash.com/@joshapplegate"></div>
 						<div class="sermon_content">
-							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
+							<div class="sermon_title"><a href="sermon_single.html">Receba o Espírito Santo por Jesus Cristo</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+								<li>Sermão por: <a href="#">Priest Jack Smith</a></li>
+								<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santos</a></li>
+								<li>Data: <a href="#">
+									Segunda 11 de março de 2018</a></li>
 							</ul>
 							<div class="sermon_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -329,11 +320,11 @@
 					<div class="popular_item">
 						<div class="popular_image"><img src="images/popular_4.jpg" alt="https://unsplash.com/@knixon"></div>
 						<div class="sermon_content">
-							<div class="sermon_title"><a href="sermon_single.html">Receive The Holy Spirit By Jesus Christ</a></div>
+							<div class="sermon_title"><a href="sermon_single.html">Receba o Espírito Santo por Jesus Cristo</a></div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+								<li>Sermão por: <a href="#">Priest Jack Smith</a></li>
+								<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santo</a></li>
+								<li>Data: <a href="#">Segunda 11 de março de 2018</a></li>
 							</ul>
 							<div class="sermon_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -367,11 +358,13 @@
 					<div class="featured_background parallax-window" data-parallax="scroll" data-image-src="images/featured_1.jpg" data-speed="0.8"></div>
 					<div class="featured_1">
 						<div class="sermon_content">
-							<div class="sermon_title">Receive The Holy Spirit By Jesus Christ</div>
+							<div class="sermon_title">
+								Receba o Espírito Santo por Jesus Cristo</div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+								<li>
+									Sermão por: <a href="#">Priest Jack Smith</a></li>
+								<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santo</a></li>
+								<li>Data: <a href="#">Segunda 11 de março de 2018</a></li>
 							</ul>
 							<div class="sermon_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -395,11 +388,12 @@
 					<div class="featured_background parallax-window" data-parallax="scroll" data-image-src="images/featured_2.jpg" data-speed="0.8"></div>
 					<div class="featured_2">
 						<div class="sermon_content">
-							<div class="sermon_title">Receive The Holy Spirit By Jesus Christ</div>
+							<div class="sermon_title">Receba o Espírito Santo por Jesus Cristo</div>
 							<ul class="sermon_list">
-								<li>Sermon by: <a href="#">Priest Jack Smith</a></li>
-								<li>Categories: <a href="#">Jesus Christ</a>, <a href="#">Holy</a></li>
-								<li>Date: <a href="#">Monday 11 March, 2018</a></li>
+								<li>Sermão por: <a href="#">Priest Jack Smith</a></li>
+								<li>Categorias: <a href="#">Jesus Cristo</a>, <a href="#">Santo</a></li>
+								<li>Data: <a href="#">Segunda 11 de março de 2018
+								</a></li>
 							</ul>
 							<div class="sermon_text">
 								<p>Praesent malesuada congue magna at finibus. In hac habitasse platea dictumst. Curabitur rhoncus auctor eleifend. Fusce venenatis diam urna, eu pharetra arcu varius ac. Etiam cursus turpis lectus, id iaculis risus tempor id. Phasellus fringilla nisl sed sem scelerisque, eget aliquam magna vehicula.nteger nec bibendum lacus.</p>
@@ -429,11 +423,11 @@
 			<div class="row">
 				<div class="col">
 					<div class="newsletter_content d-flex flex-lg-row flex-column align-items-center justify-content-start">
-						<div class="newsletter_title">Subscribe to our newsletter</div>
+						<div class="newsletter_title">Assine para receber noticias</div>
 						<div class="newsletter_form_container ml-lg-auto">
 							<form action="#" id="newsletter_form" class="newsletter_form">
-								<input type="email" class="newsletter_input" placeholder="Your email" required="required">
-								<button id="newsletter_button" class="newsletter_button">Subscribe</button>
+								<input type="email" class="newsletter_input" placeholder="Seu email" required="required">
+								<button id="newsletter_button" class="newsletter_button">Increva-se</button>
 							</form>
 						</div>
 					</div>
@@ -455,11 +449,9 @@
 					<div class="logo_container">
 						<div class="logo">
 							<a href="#">
-								<span>Believe</span>
-								<img src="images/logo_large.jpg" alt="">
+								<img class="img-logo-footer" src="images/logo2.png" alt="">
 							</a>
 						</div>
-						<div class="logo_subtitle">Church template</div>
 					</div>
 					<div class="footer_social">
 						<ul>
@@ -474,18 +466,18 @@
 				<!-- Footer Column -->
 				<div class="col-lg-4 footer_col">
 					<div class="footer_links">
-						<div class="footer_title">Useful Links</div>
+						<div class="footer_title">Links Úteis</div>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="#">Donations</a></li>
-							<li><a href="#">Sermons</a></li>
-							<li><a href="#">Causes</a></li>
-							<li><a href="#">Quotes</a></li>
-							<li><a href="blog.html">News</a></li>
-							<li><a href="#">Event List</a></li>
-							<li><a href="ministries.html">Ministries</a></li>
-							<li><a href="#">Priests</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="#">Doações</a></li>
+							<li><a href="sermons.html">Sermões</a></li>
+							<li><a href="#">Causas</a></li>
+							<li><a href="#">Citações</a></li>
+							<li><a href="blog.html">Notícias</a></li>
+							<li><a href="#">Lista de Eventos</a></li>
+							<li><a href="ministries.html">Ministérios</a></li>
+							<li><a href="#">Padres</a></li>
+							<li><a href="contact.html">Contato</a></li>
 						</ul>
 					</div>
 				</div>
@@ -493,11 +485,11 @@
 				<!-- Footer Column -->
 				<div class="col-lg-3 footer_col">
 					<div class="footer_contact">
-						<div class="footer_title">Contact Us</div>
+						<div class="footer_title">Contate-nos</div>
 						<ul>
-							<li><span>Address: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
+							<li><span>Endereço: </span>1481 Creekside Lane Avila Beach, CA 93424</li>
 							<li class="footer_contact_phone">
-								<span>Phone: </span>
+								<span>Telefone: </span>
 								<div>
 									<div> +53 345 7953 32453</div>
 									<div> +53 345 7557 822112</div>
@@ -512,8 +504,8 @@
 		</div>
 
 		<!-- Copyright -->
-		<div class="copyright text-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+		<div class="copyright text-center">
+			Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos direitos reservados | by <a href="http://sites.xfind.com.br" target="_blank">XFind</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 
